test/typescript/openfl/errors/TypeErrorTest.ts
import TypeError from "openfl/errors/TypeError";
var assert = chai.assert;


describe ("TypeScript | TypeError", function () {
	
	
	it ("new", function () {
		
		// TODO: Confirm functionality
		
		var typeError = new TypeError ();
		assert.notEqual (typeError, null);
		
	});
	
	
});